--- a/index.html
+++ b/index.html
@@ -22,43 +22,30 @@
 
 
 </head> 
+	
+<body class="encabezado">
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #c8e8f0;">
-	<a class="navbar-brand" href="index.html">Mi CV</a>
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-	  <span class="navbar-toggler-icon"></span>
-	</button>
-	<div class="collapse navbar-collapse" id="navbarNavDropdown">
-	  <ul class="navbar-nav">
-		<li class="nav-item active">
-		  <a class="nav-link" href="portafolio.html">Portafolio <span class="sr-only">(current)</span></a>
-		</li>
-	  </ul>
-	</div>
-	<div class="collapse navbar-collapse" id="navbarNavDropdown">
-		<ul class="navbar-nav">
-		  <li class="nav-item active">
-			<a class="nav-link" href="primer-landing.html">Landing page <span class="sr-only">(current)</span></a>
+	<ul class="nav justify-content-end">
+        <a class="navbar-brand" href="#">
+			<h4>Mis desafíos</h4>
+        </a>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="index.html">Mi CV</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="portafolio.html">Portafolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="primer-landing.html">Landing Page</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="iguana-page.html">Iguana Page</a>
+        </li>
+		<li class="nav-item">
+			<a class="nav-link" href="cuppon.html">Cuppon</a>
 		  </li>
-		</ul>
-	  </div>
-	  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-		<ul class="navbar-nav">
-		  <li class="nav-item active">
-			<a class="nav-link" href="iguana-page.html">Iguana page <span class="sr-only">(current)</span></a>
-		  </li>
-		</ul>
-	  </div>
-	  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-		<ul class="navbar-nav">
-		  <li class="nav-item active">
-			<a class="nav-link" href="cuppon.html">Cuppon <span class="sr-only">(current)</span></a>
-		  </li>
-		</ul>
-	  </div>
-  </nav>
-
-<body>	
+      </ul>
+	</body>
 
     <article class="resume-wrapper text-center position-relative">
 	    <div class="resume-wrapper-inner mx-auto text-start bg-white shadow-lg">
