--- a/primer-landing.html
+++ b/primer-landing.html
@@ -8,6 +8,34 @@
     <link rel="icon" type="image/png" href="assets/img/logo.png">
     <link rel="stylesheet" href="assets/css/primer-landing.css">
 </head>
+
+<body class="encabezado">
+
+	<ul class="nav justify-content-end">
+        <a class="navbar-brand" href="#">
+			<h4>Mis desafíos</h4>
+        </a>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="index.html">Mi CV</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="portafolio.html">Portafolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="primer-landing.html">Landing Page</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="iguana-page.html">Iguana Page</a>
+        </li>
+		<li class="nav-item">
+			<a class="nav-link" href="cuppon.html">Cuppon</a>
+		  </li>
+      </ul>
+	</body>
+
+
+
+
 <body>
     <div class="header">
         <ul>
