--- a/portafolio.html
+++ b/portafolio.html
@@ -8,6 +8,31 @@
     <title>Portafolio</title>
 </head>
 
+
+<body class="encabezado">
+
+	<ul class="nav justify-content-end">
+        <a class="navbar-brand" href="#">
+			<h4>Mis desafíos</h4>
+        </a>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="index.html">Mi CV</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="portafolio.html">Portafolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="primer-landing.html">Landing Page</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="iguana-page.html">Iguana Page</a>
+        </li>
+		<li class="nav-item">
+			<a class="nav-link" href="cuppon.html">Cuppon</a>
+		  </li>
+      </ul>
+	</body>
+
 <h1 class="titulo">Mi Portafolio</h1>
 
 <div class="row">
