se arreglo la expansion del nabvar en modo movil, y algunos links dentro de la pagina

--- a/index.html
+++ b/index.html
@@ -18,47 +18,38 @@
 	<script defer src="assets/fontawesome/js/all.min.js"></script>
        
     <!-- Theme CSS -->  
-    <link id="theme-style" rel="stylesheet" href="assets/css/style.css">
+	<!-- CSS only -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<link id="theme-style" rel="stylesheet" href="assets/css/style.css">
 
 
 </head> 
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #c8e8f0;">
-	<a class="navbar-brand" href="index.html">Mi CV</a>
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-	  <span class="navbar-toggler-icon"></span>
-	</button>
-	<div class="collapse navbar-collapse" id="navbarNavDropdown">
-	  <ul class="navbar-nav">
-		<li class="nav-item active">
-		  <a class="nav-link" href="portafolio.html">Portafolio <span class="sr-only">(current)</span></a>
-		</li>
-	  </ul>
-	</div>
-	<div class="collapse navbar-collapse" id="navbarNavDropdown">
-		<ul class="navbar-nav">
-		  <li class="nav-item active">
-			<a class="nav-link" href="primer-landing.html">Landing page <span class="sr-only">(current)</span></a>
-		  </li>
-		</ul>
-	  </div>
-	  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-		<ul class="navbar-nav">
-		  <li class="nav-item active">
-			<a class="nav-link" href="iguana-page.html">Iguana page <span class="sr-only">(current)</span></a>
-		  </li>
-		</ul>
-	  </div>
-	  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-		<ul class="navbar-nav">
-		  <li class="nav-item active">
-			<a class="nav-link" href="cuppon.html">Cuppon <span class="sr-only">(current)</span></a>
-		  </li>
-		</ul>
-	  </div>
-  </nav>
-
 <body>	
+
+	<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #c8e8f0;">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="index.html">Mi CV</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+			  <span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+			<ul class="navbar-nav">
+				<li class="nav-item">
+					<a class="nav-link" href="portafolio.html" target="_blank">Portafolio <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="primer-landing.html" target="_blank">Landing page <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="iguana-page.html" target="_blank">Iguana page <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="cuppon.html" target="_blank">Cuppon <span class="sr-only">(current)</span></a>
+				</li>
+			</ul>
+			</div>
+		</div>
+	  </nav>
 
     <article class="resume-wrapper text-center position-relative">
 	    <div class="resume-wrapper-inner mx-auto text-start bg-white shadow-lg">
@@ -79,10 +70,10 @@
 						    </div><!--//primary-info-->
 						    <div class="secondary-info col-auto mt-2">
 							    <ul class="resume-social list-unstyled">
-					                <li class="mb-3"><a class="text-link" href="#"><span class="fa-container text-center me-2"><i class="fab fa-linkedin-in fa-fw"></i></span>in/francesca-danae-rosales-rojas</a></li>
-					                <li class="mb-3"><a class="text-link" href="#"><span class="fa-container text-center me-2"><i class="fab fa-github-alt fa-fw"></i></span>
-										fdrosales0908.github.cl
-										</a></li>
+					                <li class="mb-3"><a class="text-link" href="https://www.linkedin.com/in/francesca-danae-rosales-rojas" target="_blank"><span class="fa-container text-center me-2"><i class="fab fa-linkedin-in fa-fw"></i></span>in/francesca-danae-rosales-rojas</a></li>
+					                <li class="mb-3"><a class="text-link" href="https://github.com/fdrosales0908/fdrosales0908.github.io" target="_blank"><span class="fa-container text-center me-2"><i class="fab fa-github-alt fa-fw"></i></span>
+										fdrosales0908.github.cl</a>
+									</li>
 							    </ul>
 						    </div><!--//secondary-info-->
 					    </div><!--//row-->
@@ -339,6 +330,8 @@
 	    </div>
     </article> 
 
+	<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </body>
 </html> 
